--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ input[type="file"] {
 label {
   display: block;
   margin-bottom: 5px;
-  color: #7f8c8d;
+  color: #000000;
   font-size: 14px;
 }
 button {
